# ValidOcean

./: .gitignore  404.html  README.md  environment.yml  index.html  pyproject.toml  sitemap.xml
ValidOcean/: __init__.py  aggregator.py  data_loader.py  dataloader.py  metrics.py  plotting.py  preprocess.py  process.py  processing.py  regridding.py  statistics.py  validator.py
ValidOcean/src/: dataloader.py  plot_utils.py  regrid_utils.py  validator.py
contributing/: index.html
customisation/: index.html
docs/: mkdocs.yml
docs/docs/: contributing.md  customisation.md  ex2_sst_validation_workflow.ipynb  ex4_ocean_observations.ipynb  example_1_sst_validation.ipynb  example_2_sic_validation.ipynb  examples.md  index.md  observations.md  user_guide.md
ex1_getting_started/: ex1_getting_started.ipynb  index.html
ex2_sst_validation_workflow/: index.html
ex3_sea_ice_validation_workflow/: ex3_sea_ice_validation_workflow.ipynb  index.html
ex4_ocean_observations/: index.html
examples/: ex1_getting_started.ipynb  ex2_sst_validation_workflow.ipynb  ex3_sea_ice_validation_workflow.ipynb  ex4_ocean_observations.ipynb
observations/: index.html
observations/ARMOR3D/: download_ARMOR3D_monthly_RP_1993_2022.py  download_ARMOR3D_monthly_RP_NA_1993_2022.py  run_send_ARMOR3D_RP_to_ODS.slurm  send_ARMOR3D_to_jasmin_os.py
observations/CCI/: run_send_CCI_climatology_to_ODS.slurm  send_CCI_to_jasmin_os.py
observations/DUACS/: download_DUACS_daily_1993_2024.py  send_DUACS_monthly_monthly_to_ODS.py
observations/EN.4.2.2/: EN.4.2.2.analyses.g10.download-list.txt  EN.4.2.2.profiles.g10.download-list.txt  download_EN4.2.2_analyses_data.sh  download_EN4.2.2_data.sh  download_EN4.2.2_profile_data.sh  run_send_EN.4.2.2_analyses_to_ODS.slurm  send_EN4.2.2_to_jasmin_os.py  unzip_EN4.2.2_data.sh
observations/GO-SHIP/: send_GO-SHIP_hydrography_to_ODS.py  send_GO-SHIP_to_jasmin_os.py
observations/GOSML/: run_send_GOSML_to_ODS.slurm  send_GOSML_to_jasmin_os.py
observations/GlobCurrent/: download_GlobCurrent_monthly_NRT_2023_2025.py  download_GlobCurrent_monthly_RP_1993_2023.py  run_send_GlobCurrent_NRT_to_ODS.slurm  run_send_GlobCurrent_RP_to_ODS.slurm  send_GlobCurrent_to_jasmin_os.py
observations/HadISST/: download_HadISST1_data.sh  preprocess_HadISST1_data.py  run_send_HadISST_to_ODS.slurm  send_HadISST_to_jasmin_os.py
observations/Kogur/: download_Kogur_data.py  run_send_Kogur_to_ODS.slurm  send_Kogur_to_jasmin_os.py
observations/LOPS-MLD/: run_send_LOPS-MLD_to_ODS.slurm  send_LOPS_MLD_to_jasmin_os.py
observations/Latrabjarg/: download_Latrabjarg_data.py  run_send_Latrabjarg_to_ODS.slurm  send_Latrabjarg_to_jasmin_os.py
observations/MOVE/: run_send_MOVE_to_ODS.slurm  send_MOVE_to_jasmin_os.py
observations/NSIDC/: download_NSIDC_monthly_1979_2025_GeoTiff.sh  process_NSIDC_SSI_Antarctic_data.py  process_NSIDC_SSI_Arctic_data.py  run_send_NSIDC_to_ODS.slurm  send_NSIDC_to_jasmin_os.py
observations/OISST/: download_OISSTv2.sh  send_OISSTv2_climatology_to_jasmin_os.py  send_OISSTv2_monthly_to_jasmin_os.py  send_OISSTv2_siconc_ltm_to_ODS.py  send_OISSTv2_siconc_monthly_to_ODS.py  send_OISSTv2_sst_ltm_to_ODS.py  send_OISSTv2_sst_monthly_to_ODS.py  send_OISSTv2_to_jasmin_os.py
observations/OSNAP/: run_send_OSNAP_to_ODS.slurm  send_OSNAP_to_jasmin_os.py
observations/OVIDE/: download_OVIDE_data.py  run_send_OVIDE_to_ODS.slurm  send_OVIDE_to_jasmin_os.py
observations/RAPID/: convert_FC_cable_transport_to_nc.py  run_send_RAPID_to_ODS.slurm  send_RAPID_to_jasmin_os.py
observations/SAMBA/: convert_SAMBA_ascii_to_nc.py  run_send_SAMBA_to_ODS.slurm  send_SAMBA_to_jasmin_os.py
observations/WOA23/: download_woa23_data.sh  send_WOA23_annual_climatology_to_ODS.py  send_WOA23_monthly_climatology_to_ODS.py  send_WOA23_seasonal_climatology_to_ODS.py  send_woa23_to_jasmin_os.py
search/: search_index.json
user_guide/: index.html
