[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm>=7",
]

[tool.setuptools]
packages = ["ValidOcean"]

[project]
name = "ValidOcean"
description = "Leveraging the cloud to accelerate ocean model validation."
requires-python = ">=3.10"
keywords = ["validation", "oceanography", "modelling", "analysis", "cloud"]
authors = [{email = "oliver.tooth@noc.ac.uk"},{name = "Ollie Tooth"}]
maintainers = [{name = "Ollie Tooth", email = "oliver.tooth@noc.ac.uk"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research"
]
dependencies = [
  "aiohttp>=3.11.12",
  "dask[complete]>=2024.10.0",
  "flox>=0.9.12",
  "gsw>=3.6.19",
  "matplotlib>=3.9.3",
  "cartopy>=0.24.0",
  "requests>=2.32.3",
  "xarray[io,accel]>=2024.10.0",
  "xesmf>=0.8.8",
  "numpy>=1.26.4",
  "zarr>=2.18.3",
  ]

dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/md"

[project.urls]
repository = "https://github.com/NOC-MSM/ValidOcean"
